some code and design added

--- a/mealdb.html
+++ b/mealdb.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body class="bg-info">
-    <h1 class="text-center fs-1 text-danger fw-bold">Search Your Favourite Food</h1>
+    <h1 class="text-center fs-1 text-danger fw-bold mt-5">Search Your Favourite Food</h1>
     <div class="input-group mb-3 w-50 mx-auto">
-        <input id="search-field" type="text" class="form-control" placeholder="Search your Favourt Food who you want" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        <input id="search-field" type="text" class="form-control mt-3" placeholder="Search your Favourt Food which your want" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button onclick="searchFood()" class="btn btn-outline-secondary mt-3 fw-bold fs-5 bg-success text-white" type="button" id="button-addon2">Button</button>
       </div>
       <div id="error">
 
@@ -19,14 +19,14 @@
 
       <!-- display food details -->
 
-      <div id="food-detail" class="w-50 mx-auto" >
+      <div id="food-detail" class="w-50 mx-auto bg-warning rounded-3" >
         
       </div>
 
 
       <!-- cart item -->
 
-      <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-100 mx-auto">
+      <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-100 mx-auto p-5">
         
       </div>
 
